# vec-drain-where

./: Cargo.toml  README.md
src/: lib.rs
