[package]
name = "vec-drain-where"
version = "1.0.0"
authors = ["Philipp Korber <p.korber@1aim.com>"]
description = "alternative `Vec::drain_filter` impl"
documentation = "https://docs.rs/vec-drain-where"
keywords = ["Vec", "drain_filter", "drain_where"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/1aim/vec-drain-where"


[dev-dependencies]
quickcheck = "0.7"