[package]
name = "vec-drain-where"
version = "1.0.1"
authors = ["Philipp Korber <p.korber@dac.eu>"]
description = "alternative `Vec::drain_filter` impl"
documentation = "https://docs.rs/vec-drain-where"
keywords = ["Vec", "drain_filter", "drain_where"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/1aim/vec-drain-where"


[dev-dependencies]
quickcheck = "0.7"

[badges]
maintenance = { status = "passively-maintained" }
